@@ -6,27 +6,44 @@ plugins {
     id "com.github.kt3k.coveralls" version "2.8.2"
 }
 
+ext.moduleName = 'photoshelf.storage'
+
 group 'com.photoshelf'
 version '0.0.1-SNAPSHOT'
 
 sourceCompatibility = 9
 
-tasks.withType(JavaCompile) {
+compileJava {
+    inputs.property("moduleName", moduleName)
     doFirst {
         options.compilerArgs = [
+                '--module-path', classpath.asPath,
                 '--add-modules', 'java.activation',
         ]
+        classpath = files()
     }
 }
 
-tasks.withType(Test) {
+compileTestJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'java.activation,junit',
+                '--add-reads', "$moduleName=junit",
+                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+        ]
+        classpath = files()
+    }
+}
+test {
+    inputs.property("moduleName", moduleName)
     doFirst {
         jvmArgs = [
                 '--add-modules', 'java.activation',
         ]
     }
 }
-
 
 repositories {
     mavenCentral()
@@ -35,11 +52,11 @@ repositories {
 
 dependencies {
     // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
     // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpmime
-    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.3'
+    implementation group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.3'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     // https://mvnrepository.com/artifact/com.github.tomakehurst/wiremock
